--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,29 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- 发送电子邮件依赖项 -->
+        <!-- 依赖项：javax.activation -->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <!-- 依赖项：javax.mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
+        <!-- 依赖项：org.apache.commons.commons-email -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
