--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <version>1.4</version>
         </dependency>
 
+        <!--spring_redis坐标-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
